--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #root {
   width: 100%;
   min-height: 100vh;
@@ -6,6 +7,7 @@
 
 #root #menu-btn {
   position: fixed;
+  z-index: 100;
   top: 0;
   right: 0;
   width: 60px;
@@ -35,7 +37,11 @@
 }
 
 #root.menu-opened {
+  position: absolute;
+  right: 0;
   background-color: #fff;
+  -webkit-transition: 500ms;
+  transition: 500ms;
 }
 
 #root.menu-opened #menu-btn {
@@ -52,5 +58,28 @@
   top: 28px;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+section {
+  width: 100%;
+  height: 100vh;
+}
+
+nav {
+  /*alapértelmezetten a right -300px, click classnévnél right:0 és mindez animálódjon*/
+  position: fixed;
+  z-index: 99;
+  top: 0;
+  right: -300;
+  width: 300px;
+  height: 100vh;
+  padding: 40px;
+  background-color: black;
+  color: #fff;
+}
+
+nav a {
+  display: block;
+  margin-bottom: 20px;
 }
 /*# sourceMappingURL=style.css.map */
