--- a/frontend/style.scss
+++ b/frontend/style.scss
@@ -1,51 +1,60 @@
 #root {
     width: 100%;
     min-height: 100vh;
-
+    
     background-color: #ccc;
-
+    
     #menu-btn {
         position: fixed;
+
+        z-index: 100;
+        
         top: 0;
         right: 0;
-
+        
         width: 60px;
         height: 60px;
-
+        
         background-color: black;
-
+        
         &::before,
         &::after {
             content: "";
-
+            
             position: absolute;
             right: 10px;
-
+            
             width: 40px;
             height: 4px;
-
+            
             background-color: white;
-
+            
             transition: top 500ms, transform 500ms;
         }
-
+        
         &::before {
             top: 20px;
         }
-
+        
         &::after {
             top: 35px;
         }
-
+        
     }
-
+    
     &.menu-opened {
+        
+        position: absolute;
+        right: 0;
+        
         background-color: #fff;
-
+        
+        transition: 500ms;
+        
         #menu-btn {
-
+            
             background-color: #333;
-
+            
             &::before {
                 top: 28px;
                 transform: rotate(45deg);
@@ -57,4 +66,36 @@
             }
         }
     }
+}
+
+section{
+    width: 100%;
+    height: 100vh;
+}
+
+nav{
+
+    /*alapértelmezetten a right -300px, click classnévnél right:0 és mindez animálódjon*/
+    position: fixed;
+
+    z-index: 99;
+
+    top: 0;
+    right: -300;
+    
+    width: 300px;
+    height: 100vh;
+
+    padding: 40px;
+
+    background-color: black;
+    color: #fff;
+    
+    a{
+        display: block;
+
+        margin-bottom: 20px;
+    }
+
+    
 }
